--- a/tokens/config.json
+++ b/tokens/config.json
@@ -100,6 +100,16 @@
           "value": "{config.fontSize.title.text} + 0.125rem",
           "type": "fontSizes"
         }
+      },
+      "subtitle": {
+        "text": {
+          "value": "{config.fontSize.title.text} - 1rem",
+          "type": "fontSizes"
+        },
+        "symbol": {
+          "value": "{config.fontSize.subtitle.text} + 0.125rem",
+          "type": "fontSizes"
+        }
       }
     },
     "dimension": {
