--- a/tokens/config.json
+++ b/tokens/config.json
@@ -6,7 +6,7 @@
         "type": "fontFamilies"
       },
       "secondary": {
-        "value": "Wand UI Pro",
+        "value": "Margiela Mono",
         "type": "fontFamilies"
       },
       "tertiary": {
@@ -103,7 +103,7 @@
       },
       "subtitle": {
         "text": {
-          "value": "{config.fontSize.title.text} - 1rem",
+          "value": "{config.fontSize.title.text} - 0.5rem",
           "type": "fontSizes"
         },
         "symbol": {
