--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1098,7 +1098,7 @@
           "value": {
             "fontFamily": "{config.fontFamily.primary}",
             "fontWeight": "{config.fontWeight.medium}",
-            "lineHeight": "90%",
+            "lineHeight": "120%",
             "fontSize": "{config.fontSize.title.text}"
           },
           "type": "typography"
@@ -1107,7 +1107,7 @@
           "value": {
             "fontFamily": "{config.fontFamily.primary}",
             "fontWeight": "{config.fontWeight.bold}",
-            "lineHeight": "90%",
+            "lineHeight": "120%",
             "fontSize": "{config.fontSize.title.text}"
           },
           "type": "typography"
@@ -1117,18 +1117,18 @@
         "default": {
           "value": {
             "fontFamily": "{config.fontFamily.primary}",
-            "fontWeight": "{config.fontWeight.medium}",
-            "lineHeight": "90%",
-            "fontSize": "{config.fontSize.title.text}"
+            "fontWeight": "{config.fontWeight.text}",
+            "lineHeight": "140%",
+            "fontSize": "{config.fontSize.subtitle.text}"
           },
           "type": "typography"
         },
         "strong": {
           "value": {
             "fontFamily": "{config.fontFamily.primary}",
-            "fontWeight": "{config.fontWeight.bold}",
-            "lineHeight": "90%",
-            "fontSize": "{config.fontSize.title.text}"
+            "fontWeight": "{config.fontWeight.medium}",
+            "lineHeight": "140%",
+            "fontSize": "{config.fontSize.subtitle.text}"
           },
           "type": "typography"
         }
@@ -1261,11 +1261,11 @@
           "type": "fontSizes"
         },
         "md": {
-          "value": "{app.fontSize.title.sm} + 1rem",
+          "value": "{app.fontSize.subtitle.sm} + 0.25rem",
           "type": "fontSizes"
         },
         "lg": {
-          "value": "{app.fontSize.title.md} + 1rem",
+          "value": "{app.fontSize.subtitle.md} + 0.25rem",
           "type": "fontSizes"
         }
       }
@@ -1360,6 +1360,20 @@
         }
       },
       "title": {
+        "sm": {
+          "value": "-0.5%",
+          "type": "letterSpacing"
+        },
+        "md": {
+          "value": "-1%",
+          "type": "letterSpacing"
+        },
+        "lg": {
+          "value": "-1.5%",
+          "type": "letterSpacing"
+        }
+      },
+      "subtitle": {
         "sm": {
           "value": "-1%",
           "type": "letterSpacing"
