--- a/tokens/config.json
+++ b/tokens/config.json
@@ -103,7 +103,7 @@
       },
       "subtitle": {
         "text": {
-          "value": "{config.fontSize.title.text} - 0.5rem",
+          "value": "{config.fontSize.base} + 0.5rem",
           "type": "fontSizes"
         },
         "symbol": {
