--- a/tokens/config.json
+++ b/tokens/config.json
@@ -110,6 +110,26 @@
           "value": "{config.fontSize.subtitle.text} + 0.125rem",
           "type": "fontSizes"
         }
+      },
+      "body": {
+        "text": {
+          "value": "{config.fontSize.base}",
+          "type": "fontSizes"
+        },
+        "symbol": {
+          "value": "{config.fontSize.subtitle.text} + 0.125rem",
+          "type": "fontSizes"
+        }
+      },
+      "callout": {
+        "text": {
+          "value": "{config.fontSize.base} - 0.125rem",
+          "type": "fontSizes"
+        },
+        "symbol": {
+          "value": "{config.fontSize.subtitle.text} + 0.125rem",
+          "type": "fontSizes"
+        }
       }
     },
     "dimension": {
