--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1546,6 +1546,16 @@
           "value": "90%",
           "type": "lineHeights"
         }
+      },
+      "body": {
+        "default": {
+          "value": "160%",
+          "type": "lineHeights"
+        },
+        "short": {
+          "value": "150%",
+          "type": "lineHeights"
+        }
       }
     }
   }
