--- a/tokens/config.json
+++ b/tokens/config.json
@@ -123,7 +123,7 @@
       },
       "callout": {
         "text": {
-          "value": "{config.fontSize.base} - 0.125rem",
+          "value": "{config.fontSize.base}",
           "type": "fontSizes"
         },
         "symbol": {
