--- a/tokens/config.json
+++ b/tokens/config.json
@@ -21,6 +21,10 @@
         "value": "Margiela Mono",
         "type": "fontFamilies"
       },
+      "code": {
+        "value": "Margiela Mono",
+        "type": "fontFamilies"
+      },
       "symbol": {
         "value": "Magic UI Symbols",
         "type": "fontFamilies"
@@ -128,6 +132,36 @@
         },
         "symbol": {
           "value": "{config.fontSize.subtitle.text} + 0.125rem",
+          "type": "fontSizes"
+        }
+      },
+      "caption": {
+        "text": {
+          "value": "{config.fontSize.base} - 0.25rem",
+          "type": "fontSizes"
+        },
+        "symbol": {
+          "value": "{config.fontSize.caption.text} + 0.125rem",
+          "type": "fontSizes"
+        }
+      },
+      "footnote": {
+        "text": {
+          "value": "{config.fontSize.base} - 0.375rem",
+          "type": "fontSizes"
+        },
+        "symbol": {
+          "value": "{config.fontSize.footnote.text} + 0.125rem",
+          "type": "fontSizes"
+        }
+      },
+      "code": {
+        "text": {
+          "value": "{config.fontSize.base}",
+          "type": "fontSizes"
+        },
+        "symbol": {
+          "value": "{config.fontSize.code.text}",
           "type": "fontSizes"
         }
       }
