--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1217,8 +1217,8 @@
         "default": {
           "value": {
             "fontFamily": "{config.fontFamily.code}",
-            "fontWeight": "{config.fontWeight.text}",
-            "lineHeight": "150%",
+            "fontWeight": "{config.fontWeight.medium}",
+            "lineHeight": "160%",
             "fontSize": "{config.fontSize.code.text}"
           },
           "type": "typography"
@@ -1226,8 +1226,8 @@
         "strong": {
           "value": {
             "fontFamily": "{config.fontFamily.code}",
-            "fontWeight": "{config.fontWeight.medium}",
-            "lineHeight": "150%",
+            "fontWeight": "SemiBold",
+            "lineHeight": "160%",
             "fontSize": "{config.fontSize.code.text}"
           },
           "type": "typography"
