--- a/tokens/config.json
+++ b/tokens/config.json
@@ -157,7 +157,7 @@
       },
       "code": {
         "text": {
-          "value": "{config.fontSize.base}",
+          "value": "{config.fontSize.base} - 0.125rem",
           "type": "fontSizes"
         },
         "symbol": {
